Fix: flex-wrap 설정

--- a/week1-assignment/style.css
+++ b/week1-assignment/style.css
@@ -4,6 +4,23 @@
   padding: 0;
 }
 
+section.burger {
+  width: 100%;
+
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+
+article.burger__card {
+  display: flex;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 8px;
+
+  width: 50%;
+}
+
 main {
   display: flex;
 }
@@ -18,23 +35,6 @@ section.burger {
 
 aside.cart {
   flex: 1.5;
-}
-
-section.burger {
-  width: 100%;
-
-  display: flex;
-  flex-wrap: nowrap;
-  gap: 15px;
-}
-
-article.burger__card {
-  display: flex;
-  background-color: white;
-  border: 1px solid black;
-  border-radius: 8px;
-
-  width: 45%;
 }
 
 article.burger__card > img {
